fixed welcome index column overflow

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -6,8 +6,10 @@
     height: 200px;
     border-style: solid;
     border-color: #f2f2f2;
-    margin: 5px;
-    border-radius: 5px;
+    margin: 10px 10px 10px 10px;
+    padding: 5px 5px 5px 5px;
+    border-radius: 5px !important;
     float: none !important;
+    overflow: auto;
     display: inline-block;
 }
